--- a/index.html
+++ b/index.html
@@ -5,22 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="loader">
-        <div class="yellow">
+    <div class="loading">
+        <div class="loader">
+
+            <div class="yellow">
+
+            </div>
+
+            <video autoplay muted src="./202503032050.mp4"></video>
         </div>
-        <video autoplay  muted src="./202503032050.mp4"></video>
+        <div class="text">
+            <h1>
+                CREATIVE PROFESSIONALS<br /><em>DEDICATED</em> TO
+                CULTURAL<br />ADVANCEMENT
+                THROUGH<br /><em>STRATEGY</em> AND <em>DESIGN</em>
+            </h1>
+        </div>
     </div>
-    
-    <div class="main">
+
+
+    <div class="main" data-scroll-container>
         <div class="page1">
             <h1>
                 CREATIVE PROFESSIONALS<br /><em>DEDICATED</em> TO
                 CULTURAL<br />ADVANCEMENT
-                THROUGH<br /><em>STRATEGY</em> AND <em>DESIGN</em></h1>
+                THROUGH<br /><em>STRATEGY</em> AND <em>DESIGN</em>
+            </h1>
         </div>
         <div class="page2">
 
@@ -30,7 +45,10 @@
         </div>
     </div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+    integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="script.js"></script>
 
 </html>
