--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WORK</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -35,7 +39,9 @@
 <a href="">Contact</a>
 <a href="">Services</a>
 <a href="">CaseStudy</a>
+<i class="ri-menu-line"></i>
     </div>
+    
 </div>
     <div class="main" data-scroll-container>
         <div class="page1" data-scroll data-scroll-speed="-3">
